fix: correct ExtPay script paths and loading order for MV3 pages

--- a/src/popup.html
+++ b/src/popup.html
@@ -68,8 +68,8 @@
     </footer>
 
     <!-- Optional: vendor extpay js if available -->
-    <script src="src/extpay.js"></script>
-    <script src="src/pay.js"></script>
+    <script src="extpay.js"></script>
+    <script src="pay.js"></script>
     <script src="popup.js"></script>
   </body>
   </html>
