--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -92,8 +92,8 @@
     </footer>
 
     <!-- Optional: vendor extpay js if available -->
-    <script src="src/extpay.js"></script>
-    <script src="src/pay.js"></script>
+    <script src="extpay.js"></script>
+    <script src="pay.js"></script>
     <script src="sidepanel.js"></script>
   </body>
   </html>
