fix: correct ExtPay script paths (avoid src/src) for background and UI pages; add comments on relative resolution

--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -92,8 +92,9 @@
     </footer>
 
     <!-- Optional: vendor extpay js if available -->
-    <script src="src/extpay.js"></script>
-    <script src="src/pay.js"></script>
+    <!-- Paths are relative to this HTML (in src/), so load sibling files without 'src/' prefix -->
+    <script src="extpay.js"></script>
+    <script src="pay.js"></script>
     <script src="sidepanel.js"></script>
   </body>
   </html>
