--- a/src/popup.html
+++ b/src/popup.html
@@ -68,8 +68,9 @@
     </footer>
 
     <!-- Optional: vendor extpay js if available -->
-    <script src="src/extpay.js"></script>
-    <script src="src/pay.js"></script>
+    <!-- Paths are relative to this HTML (in src/), so load sibling files without 'src/' prefix -->
+    <script src="extpay.js"></script>
+    <script src="pay.js"></script>
     <script src="popup.js"></script>
   </body>
   </html>
