--- a/src/pay-info.html
+++ b/src/pay-info.html
@@ -17,10 +17,15 @@
     <div class="box">
       <h1>支付模块未集成</h1>
       <p>当前使用的是本地 <code>ExtPay</code> 占位实现（stub），用于开发调试。</p>
-      <p>要启用真实支付，请将 <code>src/extpay.js</code> 替换为官方 ExtPay 库，并确保在后台脚本中调用 <code>extpay.startBackground()</code>。</p>
+      <p>要启用真实支付，请进行以下配置：</p>
+      <ol>
+        <li>在 <code>src/config.js</code> 设置 <code>APP_CONFIG.EXTPAY_ID</code> 为你的 ExtPay 项目 ID；</li>
+        <li>将 <code>src/extpay.js</code> 替换为官方 ExtPay 库（重命名为 <code>extpay.js</code>）；</li>
+        <li>在后台脚本 <code>src/background.js</code> 中已包含 <code>importScripts('config.js','extpay.js')</code> 与 <code>extpay.startBackground()</code>；</li>
+        <li>开发阶段请在 <code>manifest.json</code> 中配置 <code>key</code> 固定扩展 ID，以便与 ExtPay 后台匹配。</li>
+      </ol>
       <p>完成集成后，返回扩展弹窗中的“解锁”按钮即可打开支付页面。</p>
       <p>参考文档（外部链接）：<a href="https://extensionpay.com/docs/" target="_blank" rel="noreferrer">ExtPay 文档</a></p>
     </div>
   </body>
   </html>
-
