feat(ui): show activation expiry on pay bar; toggle between licenseText (active) and quotaText (free); hide buy button when active; apply in popup and sidepanel

--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -51,6 +51,7 @@
         <button id="downloadBtn" class="primary">下载所选</button>
       </div>
       <div id="payBar" class="pay-bar" hidden>
+        <span id="licenseText" class="license-text" hidden>已解锁</span>
         <span id="quotaText">免费额度：今日剩余 0 张</span>
         <span class="spacer"></span>
         <button id="buyBtn" title="解锁无限下载">解锁</button>
